fix pst 조원빈거로 ㅋ

--- a/teamnote.tex
+++ b/teamnote.tex
@@ -180,41 +180,76 @@ ll query(int node, int s, int e, int l, int r){
 \newpage
 \subsubsection {persistent segment tree}
 \begin{minted}{cpp}
-struct PST {
-    int l, r, v;
-    PST() : l(0), r(0), v(0) {}
-};
-PST tree[300030]; //enough size!
-int tn; //index of node
-void update(int prv, int now, int s, int e, int idx, int v) {
-    if(s==e) {
-        tree[now].v=tree[prv].v+v;
-        return;
+
+namespace pst {
+    struct node {
+        int v;
+        int l, r;
+    } nd[200 * MAXN]; // (N+Q)logN,, 문제에 따라 여유있게.
+    int root[MAXN], t = 0;
+
+    int new_node(int v) {
+        nd[++t] = {v, 0, 0};
+        return t;
     }
-    int mid=s+e>>1;
-    if(idx<=mid) {//update left
-        if(tree[now].l==0 || tree[now].l==tree[prv].l) tree[now].l=tn++;
-		//no leftson or same
-        
-        if(tree[now].r==0) tree[now].r=tree[prv].r;
-		//if rightson is empty, use original node
-        
-        update(tree[prv].l,tree[now].l,s,mid,idx,v);
+
+    int init(int l, int r) {
+        int ix = new_node(0);
+        if (l == r) return ix;
+        int m = (l + r) / 2;
+        nd[ix].l = init(l, m);
+        nd[ix].r = init(m + 1, r);
+        return ix;
     }
-    else {
-        if(tree[now].r==0 || tree[now].r==tree[prv].r) tree[now].r=tn++;
-        if(tree[now].l==0) tree[now].l=tree[prv].l;
-        update(tree[prv].r,tree[now].r,mid+1,e,idx,v);
+
+    int upd(int prev, int l, int r, int i, int v) {
+        // 노드 번호 리턴함.
+        int ix = new_node(nd[prev].v + v);
+        if (l == r) return ix;
+        int m = (l + r) / 2;
+        if (i <= m) {
+            nd[ix].l = upd(nd[prev].l, l, m, i, v);
+            nd[ix].r = nd[prev].r;
+        }
+        else {
+            nd[ix].l = nd[prev].l;
+            nd[ix].r = upd(nd[prev].r, m + 1, r, i, v);
+        }
+        return ix;
     }
-    tree[now].v=tree[tree[now].l].v+tree[tree[now].r].v;
+
+    int kth(int i1, int i2, int l, int r, int k) {
+        // k번째 작은 수
+        while (l ^ r) {
+            int cnt = nd[nd[i2].l].v - nd[nd[i1].l].v;
+            int m = (l + r) / 2;
+            if (k <= cnt) r = m, i1 = nd[i1].l, i2 = nd[i2].l;
+            else l = m + 1, k -= cnt, i1 = nd[i1].r, i2 = nd[i2].r;
+        }
+        return l;
+    }
+
+    int query(int ix, int nl, int nr, int l, int r) {
+        if (nl > r || nr < l) return 0;
+        if (nl >= l && nr <= r) return nd[ix].v;
+        int m = nl + nr >> 1;
+        return query(nd[ix].l, nl, m, l, r) + query(nd[ix].r, m + 1, nr, l, r);
+    }
 }
 
-int query(int node, int s, int e, int l, int r) {
-    if(l<=s && e<=r) return tree[node].v;
-    if(s>r || e<l) return 0;
-    int mid=s+e>>1;
-    return query(tree[node].l,s,mid,l,r) + query(tree[node].r,mid+1,e,l,r);
-}
+/*
+ *  pst::root[0] = pst::init(1, n); // 첫 세그트리 빈 거로 하나 만들어 두기
+ *  다 닫힌 구간임.
+ *
+ *
+ *  pst::root[i] = pst::upd(pst::root[i - 1], 1, n, a[i], 1); // 한 줄기 업데이트
+ *  반드시 upd 결과를 대입해야 함!!
+ *
+ *  pst::kth(pst::root[l - 1], pst::root[r], 1, n, k) // [l, r]에 있는 수 중 k번째 작은 수
+ *
+ *  pst::query(pst::root[r], 1, n, l, r); // [l, r]중 답
+ */
+
 \end{minted}
 \newpage
 \subsubsection {Li-Chao Tree}
