Rename subsection to 'mo's algorithm (hilbert)'

--- a/teamnote.tex
+++ b/teamnote.tex
@@ -2063,7 +2063,7 @@ cout<<rng();     //random [0, 2^32-1]
 int x=rng()%100; //[0,99]
 \end{minted}
 \newpage
-\subsection{mo's algorithm}
+\subsection{mo's algorithm (hilbert)}
 \begin{minted}{cpp}
 // 정렬 기준을 HilOrd로 해도 됨.
 ll HilOrd(int x, int y, int k) {
