Update header and title information in teamnote.tex

--- a/teamnote.tex
+++ b/teamnote.tex
@@ -24,8 +24,8 @@
 \usepackage{fancyhdr}
 \usepackage{lastpage}
 \pagestyle{fancy}
-\lhead{Sogang - Goraani Never Stop}
-\rhead{Page \thepage  \ of \pageref{LastPage} }
+\lhead{Page \thepage  \ of \pageref{LastPage} }
+\rhead{Sogang University - goraani}
 \fancyfoot{}
 
 \headsep 0.2cm
@@ -33,8 +33,8 @@
 \setminted{breaklines=true, tabsize=2, breaksymbolleft=}
 \usemintedstyle{perldoc}
 
-\title{Team Note of GoNeS}
-\author{djs100201, dong\_gas, tkfkddl59323}
+\title{Team Note of goraani}
+\author{djs100201, dong\_gas, wbcho0504}
 \date{Compiled on \today}
 
 \newcommand{\revised}{Should be \textcolor{red}{\textbf{revised}}.}
