--- a/teamnote.tex
+++ b/teamnote.tex
@@ -1294,6 +1294,27 @@ void solve() {
 \subsection{FFT}
 \begin{minted}{cpp}
 // if TLE, long double -> double (less precise...)
+//생성함수 유명한 등식
+// ── Formal power series 기본(수렴 가정 불필요; 해석적 의미로는 |x|<1) ──
+// [기하급수 Geometric series]
+/*
+1/(1 - x) = Σ_{n≥0} x^n
+1/(1 - a x) = Σ_{n≥0} a^n x^n
+(1 - x)^{-m} = Σ_{n≥0} C(n+m-1, m-1) x^n
+[x^n] (1 - a x)^{-m} = a^n * C(n+m-1, m-1)
+(1 - x^L)/(1 - x) = 1 + x + ... + x^{L-1}
+*/
+
+// [로그/지수 Log/Exp]
+/*
+-log(1 - x) = Σ_{n≥1} x^n / n
+log(1/(1 - x)) = Σ_{n≥1} x^n / n            // 같은 식
+-log(1 - x^k) = Σ_{r≥1} x^{kr} / r          // t = x^k 치환
+exp(x) = Σ_{n≥0} x^n / n!
+exp(ax) = Σ_{n≥0} a^n x^n / n!
+log(1 + U) = Σ_{m≥1} (-1)^{m+1} U^m / m     // 상수항(U(0)) = 0일 때 형식적 정의
+*/
+
 #define double long double 
 typedef complex<double> base;
 void fft(vector <base>& a, bool invert)
