Add online FFT implementation and related functions

--- a/teamnote.tex
+++ b/teamnote.tex
@@ -1430,6 +1430,79 @@ mod / w
 2013265921 31
 */
 \end{minted}
+\subsection{Online FFT}
+\begin{minted}{cpp}
+int n;
+vector<ll> A,F,G;
+ll Psum = 0;     // prefix sum of G: Psum = sum_{k=0}^l G[k]
+
+NTT<MOD, 3> ntt;
+
+// CDQ on [l, r)
+void DnC(int l, int r) {
+    if (l + 1 == r) {
+        ll add = F[l] * F[0] % MOD;
+        if (l) add = (add + F[0] * F[l]) % MOD;
+        G[l] = (G[l] + add) % MOD;
+        Psum = (Psum + G[l]) % MOD;
+        F[l + 1] = A[l + 1] * Psum % MOD;
+        return;
+    }
+
+    int m = (l + r) >> 1;
+
+    DnC(l, m);
+    {
+        int fLen = m - l;
+        int gLen = min(m, r - l);
+            vector<ll> f(fLen), g(gLen);
+            for (int i = 0; i < fLen; i++) f[i] = F[l + i];
+            for (int i = 0; i < gLen; i++) g[i] = F[i];
+            vector<ll> h = ntt.multiply(f, g);
+            int startT = m - l;
+            int endT = r - l - 1;
+            startT = max(startT, 0);
+            endT = min(endT, (int)h.size() - 1);
+            for (int t = startT; t <= endT; t++) {
+                int k = l + t;
+                G[k] = (G[k] + h[t]) % MOD;
+            }
+    }
+    {
+        int fLen = m - l;
+        int gLen = min(l, r - l);
+            vector<ll> f(fLen), g(gLen);
+            for (int i = 0; i < fLen; i++) f[i] = F[l + i];
+            for (int i = 0; i < gLen; i++) g[i] = F[i];
+            vector<ll> h = ntt.multiply(f, g);
+            int startT = m - l;
+            int endT = r - l - 1;
+            startT = max(startT, 0);
+            endT = min(endT, (int)h.size() - 1);
+            for (int t = startT; t <= endT; t++) {
+                int k = l + t;
+                G[k] = (G[k] + h[t]) % MOD;
+            }
+    }
+    DnC(m, r);
+}
+
+void solve() {
+    cin >> n;
+    A.assign(n + 1, 0);
+    for (int i = 1; i <= n; i++) cin >> A[i];
+
+    F.assign(n + 1, 0);
+    G.assign(n + 1, 0);
+    F[0] = 1;
+    Psum = 0;
+
+    DnC(0, n);
+
+    for (int i = 1; i <= n; i++)cout<<F[i]<<' ';
+
+}
+\end{minted}
 \subsection{Extended Euclidean \& MOD Inverse}
 \begin{minted}{cpp}
 #define MOD 998244353
